# autonomous-communication-manager

./: .env  .env.example  .gitignore  .gitmodules  CONVERSATION_SUMMARY.md  PRD-FULL-PIPELINE.md  PRD.md  README.md  SECURITY.md  design.md  main.py  pyproject.toml  pytest.ini  skills-lock.json
.firecrawl/: stampmail.md
agentica-mini/: .gitignore  README.md  chat.py  pyproject.toml  pyrightconfig.json
agentica-mini/agentica/: __init__.py  agent.py  cache.py  executor.py  executor_test.py  models.py  repl_explainer.md  responder.py  runtime.py  stubs.py  stubs_test.py
agentica-mini/agentica/logging/: __init__.py
agentica-mini/agentica/logging/loggers/: stream_logger.py
agentica-mini/agentica/std/: decorator.py
agentica-mini/agentica/utils/: capture.py
conductor/: persistence-and-error-boundaries.md
docs/: OPERATIONS.md  PRD-AGENTICA-INTEGRATION.md  PRD-tailwind-shadcn.md  issues-agentica.md  issues-tailwind-shadcn.md  landing-page-copy.md  stampmail-ui-scrape.md
docs/stampmail-raw/: branding.json  features.json  home-main.md  home.json  map.json  pricing.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
src/emailmanagement/: action_executor.py  activity_feed.py  agent_loop.py  api.py  (+9 more)
tests/: test_action_executor.py  test_activity_feed.py  test_agent_loop.py  test_api.py  test_contact_graph.py  test_debounce_buffer.py  test_draft_generator.py  test_identity_resolver.py  test_inbox_poller.py  test_metrics.py  test_persistence.py  test_resilience.py  test_settings.py  test_triage_engine.py
(+9 files in other folders)
