[project]
name = "emailmanagement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentica",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[tool.uv.sources]
agentica = { path = "./agentica-mini", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
]

